@@ -42,7 +42,9 @@ BTN_OPT_ACTIVATE = 16384;
 UI=UI_Text.prx;
 UI_SKIN=Default;
 ;Default Visualizer Plugin
-DEFAULT_VISUALIZER=VIS_ScopeDots.prx
+DEFAULT_VISUALIZER=VIS_Spectrum.prx
+VISUALIZER_FULLSCREEN_WAIT=10; Wait 10sec before going into fullscreen visualization (Set to 0 to disable).
+
 
 [WIFI]
 ; If set to 1, then PROFILE will be used.
